infrastructure/kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mouher
  labels:
    app.kubernetes.io/part-of: mouher-commerce
